--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/golang:1.11
         environment:
-          GO111MODULE: on
+          GO111MODULE: "on"
     steps:
       - checkout
       - run: go build -o gorpn main.go
@@ -14,7 +14,7 @@ jobs:
     docker:
       - image: circleci/golang:1.11
         environment:
-          GO111MODULE: on
+          GO111MODULE: "on"
     steps:
       - checkout
       - run: go test
